qsk-macros/tests/fail/analyze/invalid-key-code-in-key-function.rs
use qsk_macros::remap;

fn main() {
    remap!(
        ModLayer: {
            F -> TT(Navigation, MEOW),
        },
    );
}
