qsk-macros/tests/fail/analyze/invalid-key-code-in-key-function.stderr
error: invalid key code when converting parse::KeyFunctionParameter to KeyCode: VariantNotFound
 --> tests/fail/analyze/invalid-key-code-in-key-function.rs:6:33
  |
6 |             F -> TT(Navigation, MEOW),
  |                                 ^^^^
